# BullshitJobs

./: .Rhistory  .gitignore  Modelfile  README.md  pyproject.toml
bullshit_jobs/bs_score_validation/: _create_master_df.py  _manual.py  _rating.py
bullshit_jobs/bullshit_score/: _bureaucratic_words.py  _dictionary.py  _lda.py  _llm.py  llm_prompt.txt
bullshit_jobs/data_handling/: _create_analysis_data_set.py
bullshit_jobs/diff_in_diff/: run_diff_in_diff.R  test_parallel_trends.R  testing.R
bullshit_jobs/distributions/: _fit_bs_score.py
bullshit_jobs/load_data/: _load_data.py
bullshit_jobs/playground/: check_companies.py
bullshit_jobs/plotting/: data_section.py  plot_tables.py  plotting.py
bullshit_jobs/preprocessing/: preprocessing.py
data/: Tracking_Return_To_Office.xlsx
data/manual_evaluation/: manual_evaluation_task_ibrahim_filled_in.xlsx
data/manual_evaluation/Assessment_Confirmations/: Ibrahim_Assessment_Confirmation copy 2.docx  Ibrahim_Assessment_Confirmation copy.docx  Maike_Assessment_Confirmation.docx  Savannah_Assessment_Confirmation.docx  manual_evaluation_task_charlotte.xlsx  manual_evaluation_task_ibrahim.xlsx  (+2 more)
data/test_data/: first_1000_reviews.csv
tables/: data_covariates.tex  random_sample.tex  rto_bibtex.bib  rto_list.tex
tables/instrument_validation/: dict_model_ratings_ols_results_table.tex  dict_model_validators_ols_results_table.tex  llm_model_ratings_ols_results_table.tex  llm_model_stats_table.tex  llm_model_validators_results_table.tex  llm_ols_results_table.tex
test/: test_create_analysis_data_set.py
(+4 files in other folders)
